<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:layout_margin="10dp"
    android:clickable="true"
    app:cardElevation="50dp"
    android:focusable="true">

    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/custom_cust_review"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/text_customer"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_sub_history"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/custom_cust_review"
            android:text="@string/text_sub_history"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_change_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/text_sub_history"
            android:text="@string/text_update_mobile"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_update_details"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/text_change_pass"
            android:text="@string/text_update_bank_details"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>

