<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:scrollbars="vertical"
    tools:context=".activity.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/txtRegister"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/loginicon" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/txtRegister"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_bg"
            android:hint="@string/text_username"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRegister_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etUsername"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_bg"
            android:hint="@string/edit_email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRegister_mobile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etRegister_email"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_bg"
            android:hint="@string/edit_mobile"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRegister_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etRegister_mobile"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_bg"
            android:hint="@string/edit_pass"
            android:inputType="numberPassword"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etRegister_conf_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/etRegister_password"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_bg"
            android:hint="@string/edit_pass_conf"
            android:inputType="numberPassword"
            android:paddingStart="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegister_conf_pass"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_bg"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/text_sign_in"
            android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>